nginxの設定を見直し

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,23 +1,46 @@
 server {
-  index index.php index.html;
+  listen 80 default_server;
+  listen [::]:80 default_server ipv6only=on;
+
+  server_name _;
+
   # Laravelプロジェクトを作成して、そちらをドキュメントルートに指定したい場合は、/work/[Laravelプロジェクト名]/publicなどに変更する
   root /work/public;
 
-# ログ出力を有効にしたい場合はコメントを外す
-#  access_log /work/nginx/logs/access.log;
-#  error_log  /work/nginx/logs/error.log;
+  index index.php index.html;
+
+  # ログ出力を有効にしたい場合はコメントを外す
+  # access_log /work/nginx/logs/access.log;
+  # error_log  /work/nginx/logs/error.log;
 
   location / { 
-    try_files $uri $uri/ /index.php?$query_string;
+    try_files $uri $uri/ /index.php$is_args$args;
   }
 
-  location ~ \.php$ {
-    try_files $uri =404;
+  location ~ [^/]\.php(/|$) {
+    # リクエストされたPATHを変数にセット
+    ## $fastcgi_script_name = (.+\.php)の部分 例) /app/hoge.php/foo/bar なら /app/hoge.php
+    ## $fastcgi_path_info = (/.+)の部分       例) /app/hoge.php/foo/bar なら /foo/bar
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
+    if (!-f $document_root$fastcgi_script_name) {
+      return 404;
+    }
+
     fastcgi_pass php:9000;
     fastcgi_index index.php;
+
+    # fpmに渡すパラメータを設定(渡したパラメータはPHP側で var_export($_SERVER); とすれば確認できる)
     include fastcgi_params;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param PATH_INFO $fastcgi_path_info;
+
+    # 変数の確認（レスポンスヘッダに変数の値が格納されるので、不要になったらコメントアウト）
+    add_header $document_root $document_root;
+    add_header $uri $uri;
+    add_header $request_filename $request_filename;
+    add_header $query_string $query_string;
+    add_header $fastcgi_path_info $fastcgi_path_info;
+    add_header $fastcgi_script_name $fastcgi_script_name;
   } 
 }
