--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -9,9 +9,9 @@ server {
 
   index index.php index.html;
 
-  # ログ出力を有効にしたい場合はコメントを外す
-  # access_log /work/nginx/logs/access.log;
-  # error_log  /work/nginx/logs/error.log;
+  # ログ出力を無効にしたい場合はコメントアウト
+  access_log /work/nginx/logs/access.log;
+  error_log  /work/nginx/logs/error.log;
 
   location / { 
     try_files $uri $uri/ /index.php$is_args$args;
