--- a/work/laravel_settings.example/.env
+++ b/work/laravel_settings.example/.env
@@ -1,5 +1,6 @@
-DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_CONNECTION=default
+DB_HOST=mysql-master
+DB_HOST_SLAVE=mysql-slave
 DB_PORT=3306
 DB_DATABASE=laravel_db
 DB_USERNAME=laravel
