--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update \
 ### composerが更新されるとHashが変わってしまうので、その場合は以下のページを見て最新のものに置き換える
 ### https://getcomposer.org/download/
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
-  && php -r "if (hash_file('sha384', 'composer-setup.php') === '93b54496392c062774670ac18b134c3b3a95e5a5e5c8f1a9f115f203b75bf9a129d5daa8ba6a13e2cc8a1da0806388a8') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" \
+  && php -r "if (hash_file('sha384', 'composer-setup.php') === '48e3236262b34d30969dca3c37281b3b4bbe3221bda826ac6a9a62d6444cdb0dcd0615698a5cbe587c3f0fe57a54d8f5') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" \
   && php composer-setup.php \
   && php -r "unlink('composer-setup.php');" \
   && mv composer.phar /usr/local/bin/composer
@@ -36,6 +36,11 @@ RUN apt-get update \
 RUN pecl install -o -f redis \
   && rm -rf /tmp/pear \
   && docker-php-ext-enable redis
+
+## Xdebugを使用するための設定
+RUN pecl install -o -f xdebug \
+  && rm -rf /tmp/pear \
+  && docker-php-ext-enable xdebug
 
 # Node.jsセットアップ
 ## Node.jsインストールに必要なパッケージをインストール
