MySQL、Redisの永続化設定を追加＆Volumeにマウントするディレクトリを一箇所にまとめ

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 work/*
-!work/public
-!work/nginx/logs/.gitkeep
+!work/.docker/mysql/.gitkeep
+!work/.docker/nginx/logs/.gitkeep
+!work/.docker/redis/.gitkeep
 !work/laravel_settings.example
+!work/public
