--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -10,8 +10,8 @@ server {
   index index.php index.html;
 
   # ログ出力を無効にしたい場合はコメントアウト
-  access_log /work/nginx/logs/access.log;
-  error_log  /work/nginx/logs/error.log;
+  access_log /work/.docker/nginx/logs/access.log;
+  error_log  /work/.docker/nginx/logs/error.log;
 
   location / { 
     try_files $uri $uri/ /index.php$is_args$args;
